syntax = "proto3";

option csharp_namespace = "server.api.gRPC.Authentication";

package Authentication;

import "google/api/annotations.proto";

service Auth {
  rpc Login (LoginRequest) returns (TokenResponseReply){
	  option (google.api.http) = {
		  post: "/api/auth/login",
		  body: "*"
	  };
  }
  rpc Register (RegisterRequest) returns (StatusReply){
	  option (google.api.http) = {
		  post: "/api/auth/register",
		  body: "*"
	  };
  }
}

message LoginRequest {	
	oneof OneOfIdentity {
		string email = 1;
		string userName = 2;
	}
	string password = 3;
}

message RegisterRequest {
	string userName = 1;
	string email = 2;
	string password = 3;
}

message TokenResponseReply {
	string accessToken = 1;
	string refreshToken = 2;
	string expire = 3;
	
	StatusReply response = 4;
}

message StatusReply {
	string message = 1;
	bool isSuccess = 2;
	string userName = 3;
	repeated string errors = 4;
}
